--- a/assets/index.html
+++ b/assets/index.html
@@ -5,9 +5,12 @@
 	<link href='http://fonts.googleapis.com/css?family=Fjord+One' rel='stylesheet' type='text/css'>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Brunch example application</title>
+  <title>Good Joc</title>
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="/stylesheets/app.css">
+  <link rel="icon" href="pictures/logo/favico.png" type="image/x-icon"/>
+  <link rel="shortcut icon" href="pictures/logo/favico.png" type="image/x-icon"/>
+  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   <script src="/javascripts/vendor.js"></script>
   <script src="/javascripts/app.js"></script>
   <script>require('initialize');</script>
